# GEO_ring_cloud

./: .gitattributes  .gitignore
.githooks/: commit-msg  (+1 more)
third_report/code/geo_ring_cloud_stage1/: 01_build_core_time_index.py  02_build_standardized_cloud_native.py  03_5_semantic_validation_patch.py  03_validate_standardized_cloud_native.py  04_check_fy4b_geo_alignment.py  04b_fy4b_dqf_bit_decode_diagnostics.py  05_reproject_cloud_to_grid.py  06_5_source_selection_diagnostics.py  06_fuse_best_source.py  06c_geometry_parameter_audit.py  06c_multi_satellite_geometry_metadata_audit.py  06d_himawari_full_disk_geometry_validation.py  06e_full_geometry_angle_source_sync_patch.py  06e_vza_ecef_final_audit.py  06f_reexport_with_obitype_patch.py  06f_report_sync_patch.py  06f_unknown_aware_data_asset_audit.py  07_overlap_consistency_validation.py  07p_b_source_boundary_magnitude_review.py  07p_overlap_validator_hotfix.py  07v2_formal_single_time_report.py  08_epic_visual_comparison.py  08b_epic_l2_cloud_audit_compare.py  08c_epic_cloud_mask_semantic_sensitivity.py  08d_select_epic_monthly_semantic_validation_targets.py  08e_summarize_epic_georing_multisample.py  08f_geometry_and_prefusion_epic_diagnostics.py  08g_overlap_count_diagnostics.py  08h_meteosat_time_offset_control_test.py  08i_meteosat_source_overlap_diagnostics.py  08j_prefusion_source_pair_overlap_diagnostics.py  08k_consolidate_stage08_report.py  09_stage09_epic_georing_cloud_mask_diagnostics.py  DEPENDENCIES.md  README.md  download_geo_geometry_samples.py  environment.yml  geo_ring_cloud_claas3_adapter.py  (+27 more)
(+206 files in other folders)
