[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-ring-cloud-core"
version = "0.1.0"
description = "Stable shared APIs for the Geo Ring Cloud research pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = []

[tool.setuptools]
packages = ["geo_ring_cloud"]
